<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/view_common_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        >

        <TextView
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/familyGuide_tv_tips"
            android:textColor="@color/white" />
    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/familyGuide_familyIdWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/familyGuide_edt_searchFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/familyGuide_edt_searchFamily"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/familyGuide_tv_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:text="@string/familyGuide_tv_create" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/test_familyGuide_banner_tip"/>
</LinearLayout>