<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@drawable/bg_home_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/home_family"
                android:padding="4dp"
                android:drawableTop="@drawable/ic_home_family"
                android:layout_gravity="center"
                android:text="@string/home_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/home_notes"
                android:padding="4dp"
                android:drawableTop="@drawable/ic_home_notes"
                android:layout_gravity="center"
                android:text="@string/home_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/home_robot"
                android:padding="4dp"
                android:drawableTop="@drawable/ic_home_robot"
                android:layout_gravity="center"
                android:text="@string/home_robot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/home_weather"
                android:padding="4dp"
                android:drawableTop="@drawable/ic_home_weather"
                android:layout_gravity="center"
                android:text="@string/home_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>